Publishing on Mac

--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "main": "./main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "package": "electron-packager ./ SoundMachine --all --out ~/Desktop/SoundMachine --version 0.30.2 --overwrite --icon=./app/img/app-icon.icns"
   },
   "devDependencies": {
+    "electron-packager": "^5.0.1",
     "electron-prebuilt": "^0.30.3"
   },
   "dependencies": {
