adding about window

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "electron ."
   },
   "devDependencies": {
+    "electron": "^1.4.15",
     "electron-prebuilt": "^0.30.3"
   },
   "dependencies": {
