--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "electron-prebuilt": "^0.30.3"
   },
   "dependencies": {
-    "nconf": "^0.8.4"
+    "nconf": "^0.8.4",
+    "node-notifier": "^5.0.2"
   }
 }
