--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "main": "./main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "package": "electron-packager ~/sm SoundMachine --version=0.30.2 --out=. --overwrite --icon=app/img/app-icon.icns"
   },
   "devDependencies": {
-    "electron": "^1.8.2"
+    "electron": "^1.8.2",
+    "electron-packager": "^11.0.1"
   },
   "dependencies": {
     "nconf": "^0.10.0"
